updated html and fixed syntax

--- a/jboss-standalone/html/test.html
+++ b/jboss-standalone/html/test.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head> 
-    <body>
-<div id="quaddiv">
-	<div id="tname">jboss01</div>
-	<iframe width="100%" height="100%" src="http://172.16.171.131:8080/ticket-monster/"></iframe>
-</div>
-<div id="quaddiv">
-	<div id="tname">jboss02</div>
-	<iframe width="100%" height="100%" src="http://172.16.171.132:8080/ticket-monster/"></iframe>
-</div>
-	<div id="quaddiv"><iframe width="100%" height="100%" src="http://172.16.171.131:8080/helloworld/HelloWorld"></iframe>
-</div>
-	<div id="quaddiv"><iframe width="100%" height="100%" src="http://172.16.171.132:8080/helloworld/HelloWorld"></iframe>
-</div>
-    </body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head> 
+  <body>
+    <div id="quaddiv">
+      <div id="tname">app-server01</div>
+      <iframe width="100%" height="100%" src="http://app-server01.myenergy.company:8080/ticket-monster/"></iframe>
+    </div>
+    <div id="quaddiv">
+      <div id="tname">app-server02</div>
+      <iframe width="100%" height="100%" src="http://app-server02.myenergy.company:8080/ticket-monster/"></iframe>
+    </div>
+    <div id="quaddiv">
+      <div id="tname">app-server03</div>
+      <iframe width="100%" height="100%" src="http://app-server03.myenergy.company:8080/ticket-monster/"></iframe>
+    </div>
+    <div id="quaddiv">
+      <div id="tname">load balancer</div>
+      <iframe width="100%" height="100%" src="http://demo.myenergy.company:8080/ticket-monster/"></iframe>
+    </div>
+  </body>
 </html>
